// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core/Alert Default 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-yeoIj jdeFJT"
  >
    <div
      class="sc-gKXOVf QRSBg sc-iBkjds gwVQPy sc-hHLeRK sc-dmRaPn iKIurY eeClkm sc-gicCDI cmHWGP"
    >
      <div
        class="sc-ivTmOn dNJphr sc-cxabCf CTiCS"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-circle-check "
          data-icon="circle-check"
          data-prefix="fas"
          focusable="false"
          role="img"
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M256 512c141.4 0 256-114.6 256-256S397.4 0 256 0S0 114.6 0 256S114.6 512 256 512zM369 209L241 337c-9.4 9.4-24.6 9.4-33.9 0l-64-64c-9.4-9.4-9.4-24.6 0-33.9s24.6-9.4 33.9 0l47 47L335 175c9.4-9.4 24.6-9.4 33.9 0s9.4 24.6 0 33.9z"
            fill="currentColor"
          />
        </svg>
      </div>
      <div
        class="sc-gKXOVf ckXSHX sc-iBkjds jAkInX"
      >
        <span
          class="sc-ivTmOn fSbxau sc-llJcti egDqiq"
        >
          Success!
        </span>
        <span
          class="sc-ivTmOn dNJphr sc-llJcti iKEiEp"
        >
          This is a default alert
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Alert Emphasized 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-yeoIj jdeFJT"
  >
    <div
      class="sc-gKXOVf QRSBg sc-iBkjds dnRYSM sc-hHLeRK sc-dmRaPn iKIurY dELywO sc-gicCDI cmHWGP"
    >
      <div
        class="sc-ivTmOn dNJphr sc-cxabCf eemXLs"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-lightbulb "
          data-icon="lightbulb"
          data-prefix="fas"
          focusable="false"
          role="img"
          viewBox="0 0 384 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M272 384c9.6-31.9 29.5-59.1 49.2-86.2l0 0c5.2-7.1 10.4-14.2 15.4-21.4c19.8-28.5 31.4-63 31.4-100.3C368 78.8 289.2 0 192 0S16 78.8 16 176c0 37.3 11.6 71.9 31.4 100.3c5 7.2 10.2 14.3 15.4 21.4l0 0c19.8 27.1 39.7 54.4 49.2 86.2H272zM192 512c44.2 0 80-35.8 80-80V416H112v16c0 44.2 35.8 80 80 80zM112 176c0 8.8-7.2 16-16 16s-16-7.2-16-16c0-61.9 50.1-112 112-112c8.8 0 16 7.2 16 16s-7.2 16-16 16c-44.2 0-80 35.8-80 80z"
            fill="currentColor"
          />
        </svg>
      </div>
      <div
        class="sc-gKXOVf ckXSHX sc-iBkjds tsoYt"
      >
        <span
          class="sc-ivTmOn fSbxau sc-llJcti egDqiq"
        >
          Note!
        </span>
        <span
          class="sc-ivTmOn dNJphr sc-llJcti lccPfE"
        >
          This is an emphasized alert
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Alert Plaintext 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-yeoIj jdeFJT"
  >
    <div
      class="sc-gKXOVf QRSBg sc-iBkjds ipRjux sc-hHLeRK iKIurY sc-gicCDI cmHWGP"
    >
      <div
        class="sc-ivTmOn dNJphr sc-cxabCf eemXLs"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-lightbulb "
          data-icon="lightbulb"
          data-prefix="fas"
          focusable="false"
          role="img"
          viewBox="0 0 384 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M272 384c9.6-31.9 29.5-59.1 49.2-86.2l0 0c5.2-7.1 10.4-14.2 15.4-21.4c19.8-28.5 31.4-63 31.4-100.3C368 78.8 289.2 0 192 0S16 78.8 16 176c0 37.3 11.6 71.9 31.4 100.3c5 7.2 10.2 14.3 15.4 21.4l0 0c19.8 27.1 39.7 54.4 49.2 86.2H272zM192 512c44.2 0 80-35.8 80-80V416H112v16c0 44.2 35.8 80 80 80zM112 176c0 8.8-7.2 16-16 16s-16-7.2-16-16c0-61.9 50.1-112 112-112c8.8 0 16 7.2 16 16s-7.2 16-16 16c-44.2 0-80 35.8-80 80z"
            fill="currentColor"
          />
        </svg>
      </div>
      <span
        class="sc-ivTmOn dNJphr sc-llJcti lccPfE"
      >
        This is a plaintext alert
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Alert With Link 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-yeoIj jdeFJT"
  >
    <div
      class="sc-gKXOVf QRSBg sc-iBkjds gwVQPy sc-hHLeRK sc-dmRaPn iKIurY eeClkm sc-gicCDI cmHWGP"
    >
      <div
        class="sc-ivTmOn dNJphr sc-cxabCf CTiCS"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-circle-check "
          data-icon="circle-check"
          data-prefix="fas"
          focusable="false"
          role="img"
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M256 512c141.4 0 256-114.6 256-256S397.4 0 256 0S0 114.6 0 256S114.6 512 256 512zM369 209L241 337c-9.4 9.4-24.6 9.4-33.9 0l-64-64c-9.4-9.4-9.4-24.6 0-33.9s24.6-9.4 33.9 0l47 47L335 175c9.4-9.4 24.6-9.4 33.9 0s9.4 24.6 0 33.9z"
            fill="currentColor"
          />
        </svg>
      </div>
      <div
        class="sc-gKXOVf ckXSHX sc-iBkjds jAkInX"
      >
        <span
          class="sc-ivTmOn fSbxau sc-llJcti egDqiq"
        >
          Success!
        </span>
        <span
          class="sc-ivTmOn dNJphr sc-llJcti iKEiEp"
        >
          With a 
          <a
            class="sc-eKBdFk eDgBSD sc-bUbCnL aUvHI"
            color="primary.main"
            href="test"
          >
            link
          </a>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Alert Without Dismiss 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-yeoIj jdeFJT"
  >
    <div
      class="sc-gKXOVf QRSBg sc-iBkjds gwVQPy sc-hHLeRK sc-dmRaPn iKIurY eeClkm sc-gicCDI cmHWGP"
    >
      <div
        class="sc-ivTmOn dNJphr sc-cxabCf CTiCS"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-circle-check "
          data-icon="circle-check"
          data-prefix="fas"
          focusable="false"
          role="img"
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M256 512c141.4 0 256-114.6 256-256S397.4 0 256 0S0 114.6 0 256S114.6 512 256 512zM369 209L241 337c-9.4 9.4-24.6 9.4-33.9 0l-64-64c-9.4-9.4-9.4-24.6 0-33.9s24.6-9.4 33.9 0l47 47L335 175c9.4-9.4 24.6-9.4 33.9 0s9.4 24.6 0 33.9z"
            fill="currentColor"
          />
        </svg>
      </div>
      <div
        class="sc-gKXOVf ckXSHX sc-iBkjds jAkInX"
      >
        <span
          class="sc-ivTmOn fSbxau sc-llJcti egDqiq"
        >
          Success!
        </span>
        <span
          class="sc-ivTmOn dNJphr sc-llJcti iKEiEp"
        >
          Without a dismiss button
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Alert Without Prefix 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-yeoIj jdeFJT"
  >
    <div
      class="sc-gKXOVf QRSBg sc-iBkjds gwVQPy sc-hHLeRK sc-dmRaPn iKIurY eeClkm sc-gicCDI cmHWGP"
    >
      <div
        class="sc-ivTmOn dNJphr sc-cxabCf CTiCS"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-circle-check "
          data-icon="circle-check"
          data-prefix="fas"
          focusable="false"
          role="img"
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M256 512c141.4 0 256-114.6 256-256S397.4 0 256 0S0 114.6 0 256S114.6 512 256 512zM369 209L241 337c-9.4 9.4-24.6 9.4-33.9 0l-64-64c-9.4-9.4-9.4-24.6 0-33.9s24.6-9.4 33.9 0l47 47L335 175c9.4-9.4 24.6-9.4 33.9 0s9.4 24.6 0 33.9z"
            fill="currentColor"
          />
        </svg>
      </div>
      <div
        class="sc-gKXOVf ckXSHX sc-iBkjds jAkInX"
      >
        <span
          class="sc-ivTmOn fSbxau sc-llJcti egDqiq"
        >
          Success!
        </span>
        <span
          class="sc-ivTmOn dNJphr sc-llJcti iKEiEp"
        >
          Without a prefix
        </span>
      </div>
    </div>
  </div>
</div>
`;
